[package]
name = "png-decoder"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
repository = "https://github.com/bschwind/png-decoder"
description = "A pure-Rust, no_std compatible PNG decoder."
homepage = "https://github.com/bschwind/png-decoder"
readme = "README.md"
documentation = "https://docs.rs/png-decoder"
keywords = ["png", "image", "decoder"]
categories = ["multimedia::images"]
license-file = "MIT"

exclude = [
    "test_pngs/*",
]

[dependencies]
crc32fast = "1"
num_enum = { version = "0.5", features = [] }
miniz_oxide = { version = "0.4", features = [] }

[dev-dependencies]
image = { version = "0.23", features = ["png"] }
criterion = "0.3"

[[bench]]
name = "decode_benchmark"
harness = false
