[package]
name = "png-decoder"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
repository = "https://github.com/bschwind/png-decoder"
description = "A pure-Rust, no_std compatible PNG decoder."
homepage = "https://github.com/bschwind/png-decoder"
readme = "README.md"
documentation = "https://docs.rs/png-decoder"
keywords = ["png", "image", "decoder"]
categories = ["multimedia::images"]
license = "MIT"

exclude = [
    "test_pngs/*",
]

[dependencies]
crc32fast = { version = "1", default-features = false }
num_enum = { version = "0.5", default-features = false }
miniz_oxide = { version = "0.4", default-features = false }

[dev-dependencies]
image = { version = "0.23", features = ["png"] }
criterion = "0.3"

[[bench]]
name = "decode_benchmark"
harness = false
